# collide-logging-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: events-api.md  middleware-contract.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/collide_logging/: __init__.py  _processors.py  django.py  events.py  flask.py  starlette.py  testing.py  workers.py
tests/: test_configure.py  test_django.py  test_events.py  test_flask.py  test_foreign_loggers.py  test_processors.py  test_smoke.py  test_starlette.py  test_testing.py  test_workers.py
