[project]
name = "collide-logging"
version = "0.4.0"
description = "Python implementation of the collide/v1 logging spec"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Collide" }]
dependencies = [
    "structlog>=24",
]

[project.optional-dependencies]
django = ["django>=5"]
fastapi = ["starlette>=0.37"]
flask = ["flask>=3"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "django-stubs>=5",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collide_logging"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
